# Pactra

./: .env.example  .gitignore  Cargo.toml  JUDGE_DEMO.md  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
circuits/: mandate.circom
contracts/deployments/: testnet.json
contracts/deployments/archive/: live-mandate-2026-06-26T17-54-20-887Z.json  live-mandate-2026-06-26T17-57-26-985Z.json
contracts/groth16-verifier/src/: lib.rs  test.rs  test_vector.rs  verifying_key.rs
contracts/mock-verifier/: Cargo.toml
contracts/mock-verifier/src/: lib.rs
contracts/pactra/: Cargo.toml
contracts/pactra/src/: lib.rs  test.rs
contracts/pactra/src/fixtures/: mod.rs  valid_groth16_proof.rs
docs/: ARCHITECTURE.md  BROWSER_PROVING.md  BUILD_NOTES.md  DEMO.md  DEPLOYMENT.md  GROTH16_VERIFIER.md  VIDEO_SCRIPT.md
frontend/: .env.example  index.html
frontend/public/demo/: live-mandate.json
frontend/public/zk/: mandate.wasm  mandate_final.zkey  verification_key.json
frontend/src/: main.tsx  styles.css
frontend/src/lib/stellar/: client.ts  config.ts  contracts.ts  liveMandate.ts  (+1 more)
frontend/src/workers/: proofWorker.ts
scripts/: build-circuit.ts  check-circom.ts  demo-e2e.ts  deploy-testnet.ts  export-pactra-inputs.ts  export-verifier-test-vector.ts  export-verifier.ts  export-zk-artifacts.ts  generate-proof.ts  generate-witness.ts  live-check.ts  live-dry-run.ts  live-reset.ts  seed-circuit-input.ts  seed-demo.ts  seed-live-mandate.ts  setup-circuit.ts  tooling.ts  verify-proof.ts
src/: policy.ts
(+6 files in other folders)
