[package]
name = "pactra-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock-verifier = { path = "../mock-verifier" }
groth16-verifier = { path = "../groth16-verifier" }
